--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/seckill?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/we_chat_order?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
 server:
