--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
 server:
   servlet:
     context-path: /we_chat_order
-weChat:
+wechat:
   mpAppId: wxd898fce287jir742
   mpAppSecret: wxd898fce287jir742
+  mchId: wxd898fce287jir742
+  mchKey: wxd898fce287jir742
+  keyPath: wxd898fce287jir742
+  notifyUrl: wxd898fce287jir742
