完成卖家登陆登出功能的开发

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ wechat:
   mchKey: wxd898fce287jir742
   keyPath: wxd898fce287jir742
   notifyUrl: wxd898fce287jir742
-projectUrl:
+projecturl:
   weChatOrder: http://localhost:8080
   weChatMpAuthorize: wxd898fce287jir742
   weChatOpenAuthorize: wxd898fce287jir742
