--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,8 @@ wechat:
   mchKey: wxd898fce287jir742
   keyPath: wxd898fce287jir742
   notifyUrl: wxd898fce287jir742
+  templateId:
+    orderStatus: wxd898fce287jir742
 projecturl:
   weChatOrder: http://localhost:8080
   weChatMpAuthorize: wxd898fce287jir742
