--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
+        <finalName>we_chat_order</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
